--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load bootstrap_tags %}
 
 {% block page_title %}Login Page{% endblock %}
 
@@ -8,9 +9,11 @@
 
 <form method='POST'>
     {% csrf_token %}
-    {{ login_form }}
-    <button type='submit'>Login</button>
+    {{ login_form | as_bootstrap}}
+    <button class="btn btn-primary" type='submit'>Login</button>
 </form>
+
+<p><a href="{% url 'password_reset' %}">Forgot Password</a></p>
 
 {% endblock %}
 
