--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load bootstrap_tags %}
+
 {% block page_title %}Registration Page{% endblock %}
 
 {% block page_heading %}User Registration{% endblock %}
@@ -8,8 +10,8 @@
 
 <form method='POST'>
     {% csrf_token %}
-    {{ registration_form.as_p }}
-    <button type='submit'>Register</button>
+    {{ registration_form | as_bootstrap }}
+    <button type="button" class="btn btn-primary">Register</button>
 </form>
 
 <p>If you already have an account, you can <a href="{% url 'login' %}">sign in</a></p>
